# concrete_block_world_model

./: CMakeLists.txt  README.md  package.xml
config/: scene_discovery_defaults.yaml  world_model.yaml  world_model_seed_b0.yaml  world_model_seed_legacy_2block.yaml  world_model_seed_none.yaml  world_model_seed_pick_place.yaml  world_model_seed_truck_loading.yaml
include/concrete_block_world_model/nodes/: perception_orchestrator_node.hpp
include/concrete_block_world_model/utils/: block_utils.hpp  coarse_pose_utils.hpp  img_utils.hpp  visu_utils.hpp  world_model_utils.hpp
include/concrete_block_world_model/world_model/: block_filter.hpp  config_loader.hpp  continuous_perception.hpp  refine_flow.hpp  registration_flow.hpp  roi_processing.hpp  roi_refinement.hpp  scene_discovery_flow.hpp  state_manager.hpp
launch/: world_node.launch.py
src/nodes/: perception_orchestrator_continuous.cpp  perception_orchestrator_core.cpp  perception_orchestrator_node.cpp  perception_orchestrator_pipeline.cpp  perception_orchestrator_services.cpp  perception_orchestrator_tf_roi.cpp
src/utils/: block_utils.cpp  coarse_pose_utils.cpp  img_utils.cpp  visu_utils.cpp  world_model_utils.cpp
src/world_model/: block_filter.cpp  config_loader.cpp  continuous_perception.cpp  refine_flow.cpp  registration_flow.cpp  roi_processing.cpp  roi_refinement.cpp  scene_discovery_flow.cpp  state_manager.cpp
test/: test_block_filter.cpp  test_continuous_perception.cpp  test_world_model_utils.cpp
